--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </section>
 
   <section class="main-content">
-    <p>This project was built as a part of <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp's</a> Intermediate Front-End Development curriculum.</p>
+    <p>This project was built as a part of <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp's</a> Front-End Development curriculum.</p>
 
     <h2>User stories:</h2>
 
