--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js" async></script>
+  <script src="/twitchTV.js"></script>
 </body>
 
 </html>
